--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Pull and build external repository
         run: |
-          git clone https://github.com/JohannesWorks/N.I.N.A-Plugin-for-Touch-N-Stars.git external_repo
+          git clone https://github.com/JohannesWorks/Touch-N-Stars.git external_repo
           cd external_repo
           npm install
           npm run build
