Added port and enabled setting

--- a/Touch-N-Stars/app.config
+++ b/Touch-N-Stars/app.config
@@ -44,8 +44,11 @@
       <setting name="UpdateSettings" serializeAs="String">
         <value>True</value>
       </setting>
-      <setting name="DefaultNotificationMessage" serializeAs="String">
-        <value>This is a notification</value>
+      <setting name="AppEnabled" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="Port" serializeAs="String">
+        <value>5000</value>
       </setting>
     </TouchNStars.Properties.Settings>
   </userSettings>
