--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -60,9 +60,8 @@ jobs:
       - name: Create Plugin archives and manifests
         run: |
             curl https://api.bitbucket.org/2.0/repositories/isbeorn/nina.plugin.manifests/src/main/tools/CreateNET7Manifest.ps1 >> CreateNET7Manifest.ps1
-            pwsh CreateNET7Manifest.ps1 -file "packages/${{ env.PLUGIN_NAME }}/${{ env.PLUGIN_DLL_NAME }}.dll" -installerUrl "https://github.com/${{ github.repository }}/releases/download/v${{ steps.get_version.outputs.version }}/${{ env.PLUGIN_DLL_NAME }}.${{ steps.get_version.outputs.version }}.zip" -createArchive -includeAll
-            Get-ChildItem -Recurse *.zip
-            Rename-Item -Path "manifest.json" -NewName "${{ env.PLUGIN_DLL_NAME }}.${{ steps.get_version.outputs.version }}.manifest.json"
+            pwsh CreateNET7Manifest.ps1 -file "packages/${{ env.PLUGIN_NAME }}/${{ env.PLUGIN_DLL_NAME }}.dll" -installerUrl "https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/${{ env.PLUGIN_DLL_NAME }}.${{ github.ref_name }}.zip" -createArchive -includeAll -appendVersionToArchive
+            Rename-Item -Path "manifest.json" -NewName "${{ env.PLUGIN_DLL_NAME }}.${{ github.ref_name }}.manifest.json"
   
       - name: Create Release
         id: create_release
@@ -75,5 +74,5 @@ jobs:
           draft: false
           prerelease: false
           files: |
-            TouchNStars.zip
-            TouchNStars.manifest.json
+            ./${{ env.PLUGIN_DLL_NAME }}.${{ github.ref_name }}.zip
+            ./${{ env.PLUGIN_DLL_NAME }}.${{ github.ref_name }}.manifest.json
