--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -60,9 +60,9 @@ jobs:
       - name: Create Plugin archives and manifests
         run: |
             curl https://api.bitbucket.org/2.0/repositories/isbeorn/nina.plugin.manifests/src/main/tools/CreateNET7Manifest.ps1 >> CreateNET7Manifest.ps1
-            pwsh CreateNET7Manifest.ps1 -file "packages/${{ env.PLUGIN_NAME }}/${{ env.PLUGIN_DLL_NAME }}.dll" -installerUrl "https://github.com/${{ github.repository }}/releases/download/${{ steps.get_version.outputs.version }}/${{ env.PLUGIN_DLL_NAME }}.${{ steps.get_version.outputs.version }}.zip" -createArchive -includeAll -appendVersionToArchive
+            pwsh CreateNET7Manifest.ps1 -file "packages/${{ env.PLUGIN_NAME }}/${{ env.PLUGIN_DLL_NAME }}.dll" -installerUrl "https://github.com/${{ github.repository }}/releases/download/${{ steps.get_version.outputs.version }}/${{ env.PLUGIN_DLL_NAME }}.zip" -createArchive -includeAll -appendVersionToArchive
             Get-ChildItem -Recurse *.zip
-            Rename-Item -Path "manifest.json" -NewName "${{ env.PLUGIN_DLL_NAME }}.${{ steps.get_version.outputs.version }}.manifest.json"
+            Rename-Item -Path "manifest.json" -NewName "manifest.json"
       
       - name: Create Release
         id: create_release
@@ -75,5 +75,5 @@ jobs:
           draft: false
           prerelease: false
           files: |
-            TouchNStars.${{ steps.get_version.outputs.version }}.zip
-            TouchNStars.${{ steps.get_version.outputs.version }}.manifest.json
+            TouchNStars.zip
+            manifest.json
