add network connection details

--- a/Touch-N-Stars/app.config
+++ b/Touch-N-Stars/app.config
@@ -50,6 +50,15 @@
       <setting name="Port" serializeAs="String">
         <value>5000</value>
       </setting>
+      <setting name="LocalAdress" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="LocalNetworkAdress" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="HostAdress" serializeAs="String">
+        <value />
+      </setting>
     </TouchNStars.Properties.Settings>
   </userSettings>
   <entityFramework>
