setup plugin communication, make cors optional

--- a/Touch-N-Stars/app.config
+++ b/Touch-N-Stars/app.config
@@ -59,6 +59,9 @@
       <setting name="HostAdress" serializeAs="String">
         <value />
       </setting>
+      <setting name="UseAccessHeader" serializeAs="String">
+        <value>True</value>
+      </setting>
     </TouchNStars.Properties.Settings>
   </userSettings>
   <entityFramework>
