--- a/Touch-N-Stars/Properties/Settings.Settings
+++ b/Touch-N-Stars/Properties/Settings.Settings
@@ -20,5 +20,8 @@
     <Setting Name="HostAdress" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="UseAccessHeader" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
