--- a/Touch-N-Stars/Touch-N-Stars.csproj
+++ b/Touch-N-Stars/Touch-N-Stars.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="EmbedIO" Version="3.5.2" />
-    <PackageReference Include="NINA.Plugin" Version="3.0.0.2017-beta" />
+    <PackageReference Include="NINA.Plugin" Version="3.1.2.9001" />
     <PackageReference Include="NINA.WPF.Base" Version="3.1.2.9001" />
   </ItemGroup>
   <ItemGroup>
