--- a/Touch-N-Stars/app.config
+++ b/Touch-N-Stars/app.config
@@ -60,7 +60,7 @@
         <value />
       </setting>
       <setting name="UseAccessHeader" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
     </TouchNStars.Properties.Settings>
   </userSettings>
