--- a/Touch-N-Stars/app.config
+++ b/Touch-N-Stars/app.config
@@ -39,6 +39,9 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.globalization>
+    <culture uiCulture="en-US" culture="en-US" />
+  </system.globalization>
   <userSettings>
     <TouchNStars.Properties.Settings>
       <setting name="UpdateSettings" serializeAs="String">
