add guide star stats

--- a/Touch-N-Stars/Touch-N-Stars.csproj
+++ b/Touch-N-Stars/Touch-N-Stars.csproj
@@ -9,6 +9,8 @@
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <!-- Workaround for ToastNotifications localization issue on German systems -->
+    <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="EmbedIO" Version="3.5.2" />
