--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,5 @@ orleans.codegen.cs
 /NINA/Resources/StaticResources/ArrowLeft.xaml
 Accord.dll.config
 *.zip
+.vscode/tasks.json
+Touch-N-Stars/.vscode/tasks.json
