add mdns discovery

--- a/Touch-N-Stars/Properties/Settings.Settings
+++ b/Touch-N-Stars/Properties/Settings.Settings
@@ -23,5 +23,8 @@
     <Setting Name="UseAccessHeader" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="InstanceName" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
