--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -59,7 +59,7 @@ jobs:
   
       - name: Create Plugin archives and manifests
         run: |
-            curl https://api.bitbucket.org/2.0/repositories/isbeorn/nina.plugin.manifests/src/main/tools/CreateNET7Manifest.ps1 >> CreateNET7Manifest.ps1
+            curl https://raw.githubusercontent.com/isbeorn/nina.plugin.manifests/refs/heads/main/tools/CreateNET7Manifest.ps1 >> CreateNET7Manifest.ps1
             pwsh CreateNET7Manifest.ps1 -file "packages/${{ env.PLUGIN_NAME }}/${{ env.PLUGIN_DLL_NAME }}.dll" -installerUrl "https://github.com/${{ github.repository }}/releases/download/${{ steps.get_version.outputs.version }}/${{ env.PLUGIN_DLL_NAME }}.zip" -createArchive -includeAll
             Get-ChildItem -Recurse *.zip
             Rename-Item -Path "manifest.json" -NewName "manifest.json"
