add bahtinovfocuser for tns

--- a/Touch-N-Stars/Touch-N-Stars.csproj
+++ b/Touch-N-Stars/Touch-N-Stars.csproj
@@ -21,6 +21,12 @@
     <PackageReference Include="NINA.WPF.Base" Version="3.1.2.9001" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Remove="BahtiFocus\Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="BahtiFocus\Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Update="Properties\Settings.Designer.cs">
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <AutoGen>True</AutoGen>
